# gnome-ui-mcp

./: CONTRIBUTING.md  Dockerfile  FEATURE_COMPARISON.md  PARITY_AND_ROADMAP.md  README.md  compose.yaml  pyproject.toml  server.json
.github/workflows/: ci.yml  release.yml
scripts/: bootstrap.sh  check.sh  generate_docs.py  release.sh
src/gnome_ui_mcp/: backend.py  server.py
src/gnome_ui_mcp/desktop/: accessibility.py  app_log.py  app_wait.py  apps.py  assertions.py  boundaries.py  dbus.py  display.py  events.py  file_dialog.py  gsettings.py  highlight.py  history.py  input.py  interaction.py  keyboard_info.py  locators.py  monitor_point.py  notifications.py  ocr.py  screencast.py  scroll.py  session.py  snapshots.py  types.py  visual.py  vlm.py  wait_act.py  wayland_info.py  window_management.py  workspaces.py
tests/: test_app_log.py  test_app_wait.py  test_apps.py  test_assertions.py  test_boundaries.py  test_click_element_button.py  test_clipboard.py  test_current_focus.py  test_dbus_call.py  test_display.py  test_double_click.py  test_drag.py  test_events.py  test_file_dialog.py  test_geometry.py  test_gsettings.py  test_hidpi.py  test_highlight.py  test_history.py  test_hover_element.py  test_id_to_path.py  test_is_showing.py  test_key_combo_parsing.py  test_key_hold.py  test_key_names.py  test_launch_security.py  test_locators.py  test_mcp_imports.py  test_monitor_point.py  test_mouse_hold.py  test_mouse_move.py  test_mouse_move_relative.py  test_navigate_menu.py  test_notification_actions.py  test_notifications.py  test_ocr.py  test_path_validation.py  test_pixel_and_diff.py  test_screencast.py  test_screenshot.py  (+19 more)
